--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
-<!doctype html>
-<html> 
-<head>
-<title> Gabriel Araujo Sinigalhe</title>
-</head>
-<body>
-<h1>Gabriel Araujo Sinigalhe</h1>
-<h3>Tenho 16 anos</h3>
-<h3>Estudei em colégio particular até 2019</h3>
-<h3>Agora estudo no CEFET-RJ</h3>
-<h3>Já cursei um curso de inglês mas não terminei</h3>
-<h3>Pretendo trabalhar com pecuária e agronomia</h3>
-
-
-
-
-
-</body>
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compayible" content="IE-edge">
+        <script src="index.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Netflix do Gabriel</title>
+    <body>
+        <h1 class="nome">Nexflix</h1>
+        <main></main>
+    </body>
 </html>
-
